Add authentication context and dashboard components for platform management. Introduce AuthProvider for user authentication state management. Create CompanyList, PlatformMetrics, RecentActivity, SubscriptionOverview, and PlatformLayout components for enhanced dashboard functionality. Update package.json with new build scripts for platform-specific tasks.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "build:pms": "turbo run build --filter=pms",
+    "dev:pms": "turbo run dev --filter=pms",
+    "build:platform": "turbo run build --filter=platform",
+    "dev:platform": "turbo run dev --filter=platform",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "type-check": "turbo run type-check",
