--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -45,15 +45,15 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.9.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.31",
