--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -57,15 +57,15 @@
     "react-hot-toast": "^2.6.0",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.0",
     "util": "^0.12.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.9.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.31",
