--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -10,7 +10,8 @@
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next",
     "seed": "tsx src/scripts/seed-pms.ts",
-    "seed:pms": "tsx src/scripts/seed-pms.ts"
+    "seed:pms": "tsx src/scripts/seed-pms.ts",
+    "seed:org": "tsx src/scripts/seed-org-structure.ts"
   },
   "dependencies": {
     "@firebase/app": "^0.9.0",
