feat: Add comprehensive manufacturing org structure visualization
- Created seed-manufacturing-org.ts with complete org hierarchy from chart
  - 47 users across all levels (CEO to Interns)
  - 27 departments with proper hierarchy
  - 47 positions with reporting relationships
  - Full C-suite, VPs, GMs, Managers, Engineers, and support staff

- Built OrgChartVisualization component with advanced features
  - Interactive tree visualization with expand/collapse
  - Search by position, department, or person
  - Filter by organizational level
  - Zoom controls (50% to 200%)
  - Color-coded level badges
  - Visual assignment status (assigned/vacant)
  - Click-to-navigate functionality

- Updated org-chart page to use real data
  - Load positions, departments, and assignments
  - Display live org structure
  - Breadcrumb navigation
  - Refresh and export controls

- Added npm script: seed:manufacturing
- All components properly integrated with multi-tenant architecture

--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -11,7 +11,8 @@
     "clean": "rm -rf .next",
     "seed": "tsx src/scripts/seed-pms.ts",
     "seed:pms": "tsx src/scripts/seed-pms.ts",
-    "seed:org": "tsx src/scripts/seed-org-structure.ts"
+    "seed:org": "tsx src/scripts/seed-org-structure.ts",
+    "seed:manufacturing": "tsx src/scripts/seed-manufacturing-org.ts"
   },
   "dependencies": {
     "@firebase/app": "^0.9.0",
