feat: Add cleanup script to remove duplicate org data
- Created cleanup-org-data.ts to delete all org-related data for a company
- Removes departments, positions, assignments, delegations, audit logs, and users
- Added npm script: cleanup:org
- Useful for cleaning up before re-seeding data

--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -12,7 +12,8 @@
     "seed": "tsx src/scripts/seed-pms.ts",
     "seed:pms": "tsx src/scripts/seed-pms.ts",
     "seed:org": "tsx src/scripts/seed-org-structure.ts",
-    "seed:manufacturing": "tsx src/scripts/seed-manufacturing-org.ts"
+    "seed:manufacturing": "tsx src/scripts/seed-manufacturing-org.ts",
+    "cleanup:org": "tsx src/scripts/cleanup-org-data.ts"
   },
   "dependencies": {
     "@firebase/app": "^0.9.0",
