--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -13,6 +13,7 @@
     "xseed:pms": "tsx src/scripts/seed-pms.ts",
     "xseed:org": "tsx src/scripts/seed-org-structure.ts",
     "xseed:manufacturing": "tsx src/scripts/seed-manufacturing-org.ts",
+    "seed:spocs": "tsx src/scripts/seed-spoc-users.ts",
     "xcleanup:org": "tsx src/scripts/cleanup-org-data.ts"
   },
   "dependencies": {
@@ -47,7 +48,9 @@
     "crypto-browserify": "^3.12.0",
     "d3": "^7.8.5",
     "date-fns": "^3.0.0",
+    "dotenv": "^17.2.3",
     "firebase": "^10.7.1",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.303.0",
     "next": "^15.0.0",
