feat: Enhance task management system with Firebase functions and validation
- Added Firebase functions to automate task generation upon user assignment and template assignment.
- Implemented error handling and notifications for task assignments.
- Introduced validation schemas for user and project management using Zod.
- Enhanced the UI with new components for error boundaries and async error handling.
- Updated package dependencies and configurations for improved functionality and performance.

This commit significantly improves the task management system's automation and user experience, ensuring robust error handling and validation throughout the application.

--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,10 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs18"
+  },
   "hosting": {
     "public": "apps/web/out",
     "ignore": [
@@ -34,6 +38,9 @@
     },
     "firestore": {
       "port": 8080
+    },
+    "functions": {
+      "port": 5001
     },
     "hosting": {
       "port": 5000
