--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
@@ -39,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/d3": "^7.4.3",
+    "@types/react-window": "^1.8.8",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
@@ -61,13 +63,17 @@
     "react-flow-renderer": "^10.3.17",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.6.0",
+    "react-window": "^2.2.1",
+    "react-window-infinite-loader": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.4.0",
     "util": "^0.12.5",
+    "zod": "^4.1.12",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.0",
     "@types/node": "^20.9.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
