--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -18,6 +18,9 @@
     "xcleanup:org": "tsx src/scripts/cleanup-org-data.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@firebase/app": "^0.9.0",
     "@firebase/auth": "^1.4.0",
     "@firebase/firestore": "^4.1.0",
