refactor: Restructure project components and update dynamic imports
- Renamed and relocated project-related components to a new 'features/projects' directory for better organization.
- Deleted obsolete components: ProjectCreationForm, ProjectCreationWizard, ProjectTable, and VirtualizedProjectTable.
- Updated dynamic imports in the dynamic-imports.tsx file to reflect the new component paths.
- Adjusted package.json scripts to use the new naming convention for seeding spoc users.

This refactor enhances the maintainability and clarity of the project structure, making it easier to navigate and manage project-related features.

--- a/apps/pms/package.json
+++ b/apps/pms/package.json
@@ -14,7 +14,7 @@
     "xseed:pms": "tsx src/scripts/seed-pms.ts",
     "xseed:org": "tsx src/scripts/seed-org-structure.ts",
     "xseed:manufacturing": "tsx src/scripts/seed-manufacturing-org.ts",
-    "seed:spocs": "tsx src/scripts/seed-spoc-users.ts",
+    "xseed:spocs": "tsx src/scripts/seed-spoc-users.ts",
     "xcleanup:org": "tsx src/scripts/cleanup-org-data.ts"
   },
   "dependencies": {
